# awesimsoss

./: .gitignore  .pyup.yml  .rtd-environment.yml  .travis.yml  AUTHORS.rst  AWESim_SOSS.ipynb  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  __init__.py  awesim.py  awesim_soss_test_planet_spec.py  environment.yml  meta.yaml  order1_mask.npy  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.pytest_cache/v/cache/: lastfailed
AWESim_SOSS/: __init__.py  awesim.py  setup_package.py
AWESim_SOSS/example_results/: WASP107b-TranSpec.save  wasp107_extracted_1D_spectra.save  wasp107_injection_spectrum.save
AWESim_SOSS/extract1D/: get1Dspectrum.py
AWESim_SOSS/files/: GR700XD_1.txt  GR700XD_2.txt  GR700XD_3.txt  SOSS_PSF_tilt_order1.npy  SOSS_PSF_tilt_order2.npy  WASP107_LDC_WL.txt  order2_mask.npy  quadratic_ldc_lookup_4430_4.51_0.02.save  substrip256pedestaldms.fits  substrip256signaldms.fits  wasp107_injection_spectrum.save
AWESim_SOSS/lcfitting/: transit_light_curve_fits.py
AWESim_SOSS/sim2D/: awesim.py  generate_darks.py  noise_niriss.py  noise_simulation.py
AWESim_SOSS/sim2D/refs/: m4v_combined_template.txt
AWESim_SOSS/synSOSS/: awesim.py  awesim_joe.py
AWESim_SOSS/synSOSS/refs/: GR700XD_2.txt
AWESim_SOSS/wasp107_data/: WASP107_LDC.txt
awesimsoss/: __init__.py  awesim.py  cli.py  generate_darks.py  gitfit.py  jwst_utils.py  make_trace.py  noise_simulation.py  setup_package.py  utils.py
awesimsoss/ci/: setup_conda_env.sh
awesimsoss/files/: alpha_lyr_stis_009.fits  niriss_ref_photom.fits  soss_wavelength_trace_table1.txt
awesimsoss/files/refs/: jwst_niriss_dark_0111.fits  jwst_niriss_dark_0114.fits  jwst_niriss_dark_0129.fits  jwst_niriss_linearity_0011.fits  jwst_niriss_photom_0037.fits  jwst_niriss_superbias_0111.fits
awesimsoss/files/refs/jwst_niriss_dark_0111_data/: jwst_niriss_dark_0111.DQ.0.npy  jwst_niriss_dark_0111.DQ.1.npy  jwst_niriss_dark_0111.DQ.2.npy
awesimsoss/tests/: test_awesim_tso.py
ci/: setup_conda_env.sh
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: AWESim_SOSS.ipynb  ETC_simulation.ipynb  End-to-end Demo.ipynb  Intro to awesimsoss.ipynb  awesimsoss_demo.ipynb  demo_awesimsoss.ipynb  extract_SOSS_traces.ipynb  wasp107_injection_spectrum.save
notebooks/docs/: conf.py
refs/: GR700XD_3.txt
tests/: test_awesim.py  test_awesimsoss.py  test_gitfit.py  test_make_trace.py
(+15 files in other folders)
