[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[pycodestyle]
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = AWESim_SOSS
description = Analyzing Webb Exoplanet Simulations with SOSS
long_description = JWST NIRISS SOSS Exoplanet Spectroscopic Simulator
author = Joe Filippazzo and Jonathan Fraine
author_email = jfilippazzo@stsci.edu
license = MIT
url = https://github.com/ExoCTK/AWESim_SOSS
edit_on_github = True
github_project = ExoCTK/AWESim_SOSS
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy, scipy, matplotlib, numpy, batman-package, ExoCTK
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.dev0

[entry_points]
