[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = awesimsoss
description = awesimsoss
long_description = awesimsoss is a TSO simulator for the SOSS mode of the NIRISS instrument onboard the JWST
author = Joe Filippazzo and Jonathan Fraine
author_email = jfilippazzo@stsci.edu
license = MIT
url = https://github.com/spacetelescope/awesimsoss
edit_on_github = False
github_project = spacetelescope/awesimsoss
# install_requires should be formatted as a comma-separated list, e.g.:
install_requires = astropy, scipy, matplotlib, numpy, batman-package, ExoCTK
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.1
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.5

[entry_points]

astropy-package-template-example = packagename.example_mod:main

